crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_fk_same_table_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 376
expression: rendered
---
model Post {
  id String @id // stored as binary(16) on MySQL backends
  creator_user_id String // stored as binary(16) on MySQL backends
  creator_user User @relation("PostCreatorUser", fields: [creator_user_id], references: [id])
  used_by_user_id String // stored as binary(16) on MySQL backends
  used_by_user User @relation("PostUsedByUser", fields: [used_by_user_id], references: [id])

  @@map("post")
}
