crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_reverse_relations_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 376
expression: rendered
---
model User {
  id String @id // stored as binary(16) on MySQL backends
  preferred_user_profile Profile[] @relation("ProfilePreferredUser")
  backup_user_profile Profile[] @relation("ProfileBackupUser")

  @@map("user")
}
